--- a/EBAC MOTORS/js/vercel.json
+++ b/EBAC MOTORS/js/vercel.json
@@ -1,3 +1,9 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+    "version": 2,
+    "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" }
+],
+"routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+    ]
 }
