--- a/EBAC MOTORS/vercel.json
+++ b/EBAC MOTORS/vercel.json
@@ -1,5 +1,16 @@
 {
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ]
+  "name": "modulo_10_estrutura_inicial",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-scripts": "5.0.0"
+  }
 }
