--- a/EBAC MOTORS/vercel.json
+++ b/EBAC MOTORS/vercel.json
@@ -1,16 +1,6 @@
-{
-  "name": "ebac-motor",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "react": "^18.0.2",
-    "react-dom": "^18.0.2",
-    "react-scripts": "5.0.0"
-  }
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "echo \"No test specified\"",
+  "eject": "react-scripts eject"
 }
