--- a/EBAC MOTORS/vercel.json
+++ b/EBAC MOTORS/vercel.json
@@ -1,6 +1,11 @@
-"scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "echo \"No test specified\"",
-  "eject": "react-scripts eject"
+{
+      "router": "/", [
+        {
+        "src": "/"
+        },
+        {
+          "src": "/test",
+          "dest": "/"
+        }
+    }
 }
